--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div class="slide-container">
         <div class="slide">
-            <img src="/img/(1).jpg" alt="">
+            <img src="/(1).jpg" alt="">
             <div class="captions">Caption image 1</div>
         </div>
         <div class="slide">
-            <img src="/img/(2).jpg" alt="">
+            <img src="/(2).jpg" alt="">
             <div class="captions">Caption image 2</div>
         </div>
         <div class="slide">
-            <img src="/img/(3).jpg" alt="">
+            <img src="/(3).jpg" alt="">
             <div class="captions">Caption image 3</div>
         </div>
         <div class="slide">
-            <img src="/img/(4).jpg" alt="">
+            <img src="/(4).jpg" alt="">
             <div class="captions">Caption image 4</div>
         </div>
         <span class="arrow prev" onclick="controller(-1)">&#10094;</span>
